# Kraft

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  database.py  main.py
app/models/: __init__.py  asset.py  build.py  marketplace.py  project.py  user.py
app/routers/: assets.py  auth.py  builds.py  chat.py  marketplace.py  projects.py
app/schemas/: asset.py  build.py  marketplace.py  project.py  user.py
app/services/: ai_orchestrator.py  blender_fabricator.py  build_runner.py  codegen_godot.py  pixel_forge.py  storage.py
app/templates/: auth.html  base.html  dashboard.html  marketplace.html  preview.html  project.html
app/workers/: __init__.py  blender_worker.py  build_worker.py  codegen_worker.py  pixel_worker.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_extended_graphs.py  003_add_dimension.py
scripts/: test_connection.py
scripts/blender_scripts/: create_asset.py
scripts/godot_export/: export_presets.cfg  project_template.godot
